test: improve restaurant handler, use case and request DTO validation tests