@@ -7,12 +7,18 @@ import com.pragma.powerup.domain.model.RolType;
 import com.pragma.powerup.domain.model.UserModel;
 import com.pragma.powerup.domain.spi.IRestaurantPersistencePort;
 import com.pragma.powerup.domain.spi.IUserExternalServicePort;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -52,34 +58,57 @@ class RestaurantUseCaseTest {
                 .build();
     }
 
+    private PageRequest buildPage() {
+        int pageSize = 2;
+        int page = 0;
+        return PageRequest.of(page, pageSize, Sort.by(Sort.Direction.ASC, "nombre"));
+    }
+
     @Test
-    void getAllRestaurants_shouldReturnAllRestaurants() {
+    @DisplayName("getAll(PageRequest) debe retornar la página de restaurantes ordenada por nombre")
+    void getAllRestaurants_Paged_shouldReturnPagedList() {
         RestaurantModel restaurant1 = buildRestaurantModel(1L, "Restaurant A", 100L);
         RestaurantModel restaurant2 = buildRestaurantModel(2L, "Restaurant B", 101L);
 
-        when(restaurantPersistencePort.getAll()).thenReturn(List.of(restaurant1, restaurant2));
+        List<RestaurantModel> restaurantList = Arrays.asList(restaurant1, restaurant2);
+        Page<RestaurantModel> mockedPage = new PageImpl<>(restaurantList, buildPage(), 20);
 
-        List<RestaurantModel> result = restaurantUseCase.getAll();
+        PageRequest pageRequest = buildPage();
 
-        assertNotNull(result, "La lista no debe ser null.");
-        assertEquals(2, result.size(), "Debe retornar 2 restaurantes.");
-        assertEquals("Restaurant A", result.get(0).getNombre(), "El nombre del primer restaurante debe coincidir.");
+        when(restaurantPersistencePort.getAll(pageRequest)).thenReturn(mockedPage);
 
-        verify(restaurantPersistencePort).getAll();
+        Page<RestaurantModel> result = restaurantUseCase.getAll(pageRequest.getPageNumber(), pageRequest.getPageSize());
+
+        assertNotNull(result, "La página no debe ser null.");
+        assertEquals(2, result.getContent().size(), "Debe retornar el tamaño de la página (2).");
+        assertEquals(20, result.getTotalElements(), "El total de elementos debe coincidir con el mock (20).");
+        assertEquals("Restaurant A", result.getContent().get(0).getNombre(), "El primer restaurante debe ser 'Restaurant A'.");
+        assertEquals("Restaurant B", result.getContent().get(1).getNombre(), "El segundo restaurante debe ser 'Restaurant B'.");
+
+        verify(restaurantPersistencePort).getAll(pageRequest);
     }
 
     @Test
-    void getAllRestaurants_shouldReturnEmptyList_whenNoRestaurantsExist() {
-        when(restaurantPersistencePort.getAll()).thenReturn(Collections.emptyList());
-        List<RestaurantModel> result = restaurantUseCase.getAll();
+    @DisplayName("getAll(PageRequest) debe retornar página vacía si la página no tiene resultados")
+    void getAllRestaurants_Paged_shouldReturnEmptyList_whenNoRestaurantsOnPage() {
+        Page<RestaurantModel> mockedEmptyPage = new PageImpl<>(Collections.emptyList(), buildPage(), 10);
 
-        assertNotNull(result, "La lista no debe ser null (debe ser vacía).");
-        assertTrue(result.isEmpty(), "La lista debe estar vacía.");
+        PageRequest pageRequest = buildPage();
 
-        verify(restaurantPersistencePort).getAll();
+        when(restaurantPersistencePort.getAll(pageRequest)).thenReturn(mockedEmptyPage);
+
+        Page<RestaurantModel> result = restaurantUseCase.getAll(pageRequest.getPageNumber(), pageRequest.getPageSize());
+
+        assertNotNull(result, "La página no debe ser null.");
+        assertTrue(result.isEmpty(), "La página debe estar vacía (isEmpty()).");
+        assertEquals(0, result.getContent().size(), "El contenido debe estar vacío.");
+        assertEquals(10, result.getTotalElements(), "El total de elementos debe ser 10, aunque la página sea vacía.");
+
+        verify(restaurantPersistencePort).getAll(pageRequest);
     }
 
     @Test
+    @DisplayName("getById debe retornar un restaurante")
     void getRestaurantById_shouldReturnRestaurant_whenFound() {
         Long restaurantId = 1L;
         RestaurantModel expectedRestaurant = buildRestaurantModel(restaurantId, "Restaurant Found", 100L);
@@ -98,6 +127,7 @@ class RestaurantUseCaseTest {
     }
 
     @Test
+    @DisplayName("save(restaurant) no debe generar ninguna excepcion")
     void saveRestaurant_success() {
         UserModel ownerUser = buildOwner();
         RestaurantModel newRestaurant = buildRestaurantModel(null, "New Restaurant", ownerUser.getId());
@@ -111,6 +141,7 @@ class RestaurantUseCaseTest {
     }
 
     @Test
+    @DisplayName("save(restaurante) debe lanzar una excepcion cuando usuario no tiene el rol propietario")
     void saveRestaurant_whenUserIsNotOwner_shouldThrowException() {
         Long invalidOwnerId = 200L;
         RestaurantModel newRestaurant = buildRestaurantModel(null, "Forbidden restaurant", invalidOwnerId);
